--- a/config/03_drone_1.yml
+++ b/config/03_drone_1.yml
@@ -14,9 +14,10 @@ basys:
       service:
         implementationJavaClass: de.dfki.cos.basys.p4p.controlcomponent.drone.service.DroneServiceImpl
         connectionString: tcp://10.2.10.1:1883
-        droneInspectionServiceEndpoint: http://10.2.0.18:5000
-        mqttUsername: "drone_control_component"
-        mqttPassword: "Dr0ne-C0ntrol-Compon3nt"
+        properties:
+          droneInspectionServiceEndpoint: http://10.2.0.18:5000
+          mqttUsername: "drone_control_component"
+          mqttPassword: "Dr0ne-C0ntrol-Compon3nt"
     simulate:
       disableExecutionModeChange: true
       disableOccupationCheck: true
